--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       href="/src/assets/images/icons/favicon.svg"
     />
     <meta charset="UTF-8" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Algorithm Visualiser</title>
   </head>
